--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     --highlight-dim: rgb(167, 66, 20);
     
     --grid-item-width: 35rem;
-    --grid-item-width-small: 25rem;
+    --grid-item-width-small: 20rem;
 }
 
 html {
